
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int abs(int num)
{
  if(num < 0)
    return -num;
  else
    return num;
}
